# Evalution

./: .gitignore  AGENTS.MD  AGENTS.md  README.md  engines.md  missing.csv  nogil_cuda_ctx_repro.py  pyproject.toml  setup.py
.github/scripts/: allocate_gpu.py  ci_common.py  ci_gpu.py  ci_tests.py  ci_workflow.py  common.py  install_unit_test_deps.py  list_test_files.py  prepare_unit_test.py  release_gpu.py  run_tests.py  unit_test_config.py
.github/workflows/: compatibility.yml  release.yml  setuptools_compatibility_reusable.yml  unit_tests.yml  unit_tests_reusable.yml
.tmp_sitecustomize/: sitecustomize.py
benchmarks/: benchmark_llama3_2_gsm8k_matrix.py
docs/: benchmark_suite_guidelines.md  datasets.md  engine.md  lm_eval_gap_report_2026-03-23.md  lm_eval_missing_main_families_2026-03-23.csv  lm_eval_missing_open_pr_families_2026-03-23.csv  scorers.md  scores.md
evalution/: __init__.py  _banner.py  cli.py  compare.py  config.py  logbar.py  results.py  runtime.py  version.py  yaml.py
evalution/benchmarks/: __init__.py  aexams.py  afrimgsm.py  afrimmlu.py  afrixnli.py  agieval.py  aime.py  alghafa.py  anli.py  arabic_subject_mmlu.py  arabicmmlu.py  arc_challenge.py  arc_easy.py  arc_exam.py  arc_mt.py  arithmetic.py  asdiv.py  assin.py  babi.py  babilong.py  bangla.py  base.py  bbh.py  bbq.py  bear.py  belebele.py  blimp.py  boolq.py  c4.py  cabbq.py  capability_gated.py  careqa.py  cb.py  ceval.py  click.py  cmmlu.py  cnn_dailymail.py  cocoteros_es.py  code_x_glue.py  cola.py  (+136 more)
evalution/datasets/: __init__.py  flores200.py  mediqa_qa.py  meqsum.py  wnli_es.py  xlsum.py
evalution/engines/: __init__.py  base.py  continuous.py  gptqmodel_engine.py  llama_cpp_engine.py  memory.py  openai_engine.py  openai_server.py  openvino_engine.py  sglang_engine.py  tensorrt_llm_engine.py  tinygrad_engine.py  transformer.py  transformer_compat.py  transformers.py  transformers_common.py  transformers_compat.py  vllm_engine.py
evalution/scorers/: __init__.py  bleu.py  choice_label.py  classification.py  gsm8k.py  longbench.py  math_exact_match.py  multiple_choice.py  qa_text.py  rouge.py  summary_rouge.py  translation.py
evalution/suites/: __init__.py  arc_challenge.py  arc_easy.py  arc_exam.py  base.py  boolq.py  cb.py  classification_metrics.py  cola.py  copa.py  data.py  execution.py  gsm8k.py  gsm8k_common.py  gsm8k_platinum.py  hellaswag.py  mmlu.py  mmlu_pro.py  mnli.py  mrpc.py  multiple_choice.py  multiple_choice_utils.py  openbookqa.py  piqa.py  qnli.py  qqp.py  rte.py  sst2.py  subsets.py  wic.py  winogrande.py  wnli.py
scripts/: arch.md  run_idle_gpu_pytest_shards.py
tests/: __init__.py  conftest.py  models_support.py  test_aexams.py  test_afrimgsm.py  test_afrimmlu.py  test_afrixnli.py  test_agieval.py  test_aime.py  test_alghafa.py  test_anli.py  test_api.py  test_arabicmmlu.py  test_arc_challenge.py  test_arc_easy.py  test_arc_mt.py  test_arithmetic.py  test_asdiv.py  test_assin.py  test_babi.py  test_babilong.py  test_bangla.py  test_bbh.py  test_bbq.py  test_bear.py  test_belebele.py  test_benchmark_order.py  test_benchmark_stream_defaults.py  test_blimp.py  test_boolq.py  test_c4.py  test_cabbq.py  test_capability_gated.py  test_careqa.py  test_cb.py  test_ceval.py  test_cli.py  test_click.py  test_cmmlu.py  test_cnn_dailymail.py  (+157 more)
tests/models/: test_aexams_llama3_2_transformers.py  test_afrimgsm_llama3_2_transformers.py  test_afrimmlu_llama3_2_transformers.py  test_afrixnli_llama3_2_transformers.py  test_agieval_llama3_2_transformers.py  test_aime_llama3_2_transformers.py  test_alghafa_llama3_2_transformers.py  test_anli_r1_llama3_2_transformers.py  test_anli_r2_llama3_2_transformers.py  test_anli_r3_llama3_2_transformers.py  test_arabicmmlu_llama3_2_transformers.py  test_arc_challenge_label_perm_0_25_llama3_2_transformers.py  test_arc_challenge_llama3_2_transformers.py  test_arc_easy_llama3_2_transformers.py  test_arc_mt_llama3_2_transformers.py  test_arithmetic_llama3_2_transformers.py  test_asdiv_cot_llama_llama3_2_transformers.py  test_asdiv_llama3_2_transformers.py  test_babi_llama3_2_transformers.py  test_babilong_llama3_2_transformers.py  test_bangla_llama3_2_transformers.py  test_bbh_llama3_2_transformers.py  test_bbq_llama3_2_transformers.py  test_bear_llama3_2_transformers.py  test_belebele_llama3_2_transformers.py  test_c4_llama3_2_transformers.py  (+169 more)
