[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "Evalution"
version = "0.0.1"
description = "Python package for Evalution."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "datasets>=4.8.3",
    "tokenicer>=0.0.11",
    "logbar>=0.3.0",
    "PyPcre>=0.2.14",
    "PyYAML>=6.0",
    "transformers>=5.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
evalution = "evalution.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["evalution*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require external model assets or full inference",
    "slow: tests that are expensive to run",
]
filterwarnings = [
    "ignore:The `HF_HUB_ENABLE_HF_TRANSFER` environment variable is deprecated.*:DeprecationWarning",
    "ignore:Importing from torchao\\.dtypes\\.uintx\\.dyn_int8_act_int4_wei_cpu_layout is deprecated.*:DeprecationWarning",
    "ignore:Importing from torchao\\.dtypes\\.uintx\\.uintx_layout is deprecated.*:DeprecationWarning",
    "ignore:Importing BlockSparseLayout from torchao\\.dtypes is deprecated.*:DeprecationWarning",
]
